<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ProductForm">

    <TextView
        android:id="@+id/textTittleForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textTittleForm"
        android:textColor="@color/white"
        android:textSize="60dp" />

    <Space
        android:layout_width="0dp"
        android:layout_height="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewForm"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/product1"></ImageView>

        <Space
            android:layout_width="0dp"
            android:layout_height="40dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewFormName"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textViewFormName"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/editTextFormName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#FBFAFA"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewFormDescription"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textViewFormDescription"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/editTextFormDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#F8F6F6"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewFormPrice"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textViewFormPrice"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/editTextFormPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#FDFCFC"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/white" />

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/btnFormRegistrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnFormRegistrar" />
    </LinearLayout>
</LinearLayout>