<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".MainActivityRegisto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="0dp"
                android:layout_height="30dp"></Space>
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:srcCompat="@drawable/tecnostore1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textNameRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/textNameRegisto"
                android:textColor="@color/white"
                android:textSize="30dp" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:backgroundTint="#F6F4F4"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textLastName"
                android:textColor="@color/white"
                android:textSize="30dp" />

            <EditText
                android:id="@+id/editLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:backgroundTint="#F8F1F1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textAge"
                android:textColor="@color/white"
                android:textSize="30dp" />

            <EditText
                android:id="@+id/editAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:backgroundTint="#F8F5F5"
                android:ems="10"
                android:inputType="textPersonName" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textTelefono"
                android:textColor="@color/white"
                android:textSize="30dp" />

            <EditText
                android:id="@+id/editTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:backgroundTint="#FFFDFD"
                android:ems="10"
                android:inputType="textPersonName" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textPassword"
                android:textColor="@color/white"
                android:textSize="30dp" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:backgroundTint="#FDFCFC"
                android:ems="10"
                android:inputType="textPersonName" />


        </LinearLayout>

           <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="10" />

            </LinearLayout>-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"

                android:text="@string/buttonSesion" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>