<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"

    android:foregroundTint="#F4ECEC"
    tools:context=".MainActivityInicioSesion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


        <TextView
            android:id="@+id/textTituloSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textTituloSesion"


            android:textColor="@color/white"
            android:textSize="40dp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="0dp"
                android:layout_height="30dp"></Space>
        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewSesion"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:srcCompat="@drawable/tecnostore1" />

        <Space
            android:layout_width="0dp"
            android:layout_height="90dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textNameSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/textNameSesion"
                android:textColor="@color/white"
                android:textSize="30dp" />

            <EditText
                android:id="@+id/editNameSesion"
                style="t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FBFBFB"

                android:ems="10"
                android:foregroundTint="#F4EFEF"
                android:inputType="textPersonName"
                android:shadowColor="#FDF9F9"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="#F8F0F0"
                android:textColorLink="#F6F5F5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textPasswordSesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textPasswordSesion"
                android:textColor="@color/white"
                android:textSize="30dp" />

            <EditText
                android:id="@+id/editPasswordSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FDF8F8"
                android:ems="10"

                android:foregroundTint="#FBFBFB"
                android:inputType="textPersonName"
                android:outlineSpotShadowColor="@color/white"
                android:shadowColor="#FFFCFC"
                android:textColor="@color/white"
                android:textColorHighlight="#F1EFEF"
                android:textColorHint="#F4EFEF"
                android:textColorLink="#F8F2F2" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="90dp"></Space>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonIngresarSesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonIngresarSesion"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Registrate"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btnRegistroSesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnRegistroSesion"
                android:textSize="20dp" />
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>